--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script type='text/javascript' src='lib/web3.min.js'></script>
 
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 
@@ -28,6 +29,11 @@
             <li class="nav-item">
                 <a class="nav-link" href="#">Home</a>
             </li>
+
+            <li class="nav-item">
+                <a class="nav-link" href="#" data-toggle="modal" data-target="#modal-getethbalance">Fetch Ethereum Balance</a>
+            </li>
+
             <li class="nav-item">
                 <a class="nav-link" href="#" data-toggle="modal" data-target="#modal-about">About</a>
             </li>
@@ -45,7 +51,6 @@
         </ul>
 
     </nav>
-
 
     <!-- Modals -->
     <!-- About Modal -->
@@ -99,15 +104,72 @@
         </div>
     </div>
 
+    <!-- Modal - Get Ethereum Balance -->
+    <div class="modal fade" id="modal-getethbalance">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+
+                <!-- Modal Header -->
+                <div class="modal-header">
+                    <h4 class="modal-title">Fetch Ethereum Balance</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+
+                <!-- Modal body -->
+                <div class="modal-body" id="modal-body-text">
+                    <p>Welcome to the Ethereum Balance Checker Application!</p>
+
+                    <form id="formGetEthBalance" name="getethbalance" role="form">
+                        <div class="form-group">
+                            <label for="formGroupEthAddress">Ethereum Address</label>
+                            <input type="text" class="form-control" id="formGroupEthAddress" placeholder="Ethererum Address">
+                        </div>
+
+                        <div class="form-group">
+                            <button class="btn btn-primary " name="submit" type="submit">Submit</button>
+                        </div>
+
+                        <div class="form-group">
+
+                            <br />
+                            <div class="progress">
+                                <div class="progress-bar">0%</div>
+                            </div>
+
+                            <button class="btn btn-primary" id="test">
+                                <span class="spinner-border spinner-border-sm"></span>
+                                Loading..
+                            </button>
+
+
+
+
+                            <div id="status"></div>
+
+
+                        </div>
+
+                    </form>
+                </div>
+
+                <!-- Modal footer -->
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
 
 
 
     <!-- Footer -->
     <div class="pgfooter">
-        <p>Copyright </p>
+        <p>© 2019 Copyright: Demo Corp</p>
     </div>
 
 </div>
 </body>
-    <script src="lib/app.js"></script>
+    <script src="lib/app.js" type="text/javascript"></script>
 </html>
